# qwop-fast

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  qwop_fast.pyi
.github/workflows/: CI.yml
src/: lib.rs
